fix lines overflowing

--- a/src/components/Cueing/style.css
+++ b/src/components/Cueing/style.css
@@ -2,7 +2,6 @@
   font-size: 16px;
   align-text: center;
   margin: 4em;
-  white-space: pre;
 }
 
 .listening {
